# simple-asm

./: -  .gitignore  .pre-commit-config.yaml  CLAUDE.md  Makefile  README.md  assembler_readable.asm  assembler_source.asm  assembler_test.asm  bootstrapping_script.md  counter.punch  direct.hex  example_counter.asm  example_friendly.asm  format_documentation.md  friendly.punch  hand_assembly_guide.md  minimal_6502_assembler_design.md  opcode_table.md  original_idea_script.md  punch.hex  punch_card_formatter.py  pyproject.toml  simple_6502_emulator.py  simple_asm.py  simple_relocation.asm  simple_test.asm  test_branch_consistency.py  test_data.asm  test_labels.asm  test_programs.md  test_relocation.asm
.claude/agents/: 6502-optimization-expert.md
.github/workflows/: ci.yml
tests/: __init__.py  conftest.py  test_assembler.py  test_bootstrap.py  test_data.asm  test_emulator.py  test_labels.py
