[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "simple-asm"
version = "0.1.0"
description = "Minimal 6502 assembler for bootstrapping"
authors = [
    {name = "Matt Godbolt", email = "matt@godbolt.org"},
]
requires-python = ">=3.8"
dependencies = []

[project.scripts]
simple-asm = "simple_asm:main"

[tool.uv]
dev-dependencies = [
    "pytest>=7.0",
    "black>=22.0",
    "ruff>=0.1.0",
]

[tool.black]
line-length = 88
target-version = ['py38']

[tool.ruff]
line-length = 88
target-version = "py38"
select = ["E", "F", "W", "I", "N", "UP"]