[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "simple-asm"
version = "0.1.0"
description = "Minimal 6502 assembler for bootstrapping"
authors = [
    {name = "Matt Godbolt", email = "matt@godbolt.org"},
]
requires-python = ">=3.13"
dependencies = [
    "click>=8.1.8",
]

[project.scripts]
simple-asm = "simple_asm:main"

[tool.uv]
dev-dependencies = [
    "pytest>=8.2.2",
    "pre-commit>=3.7.1",
    "ruff>=0.11.7"
]

[tool.ruff]
line-length = 120
target-version = "py313"

[tool.ruff.lint]
select = [
    # https://docs.astral.sh/ruff/rules/
    "E", # pycodestyle errors,
    "W", # pycodestyle warnings
    "F", # pyflake
    "FA", # pyflake future annotations
    "B", # flake8-bugbear
    "I", # isort
    "UP", # pyupgrade
]
ignore = [
    "E501" # line length
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
addopts = "-v --tb=short"
